refact: 카테고리 enum 도입 및 프론트엔드 select box 구현
- Category enum 추가로 카테고리 타입 안전성 확보
- 한국어 표시명과 enum 값 매핑 기능 구현
- 프론트엔드 카테고리 입력을 text input에서 select box로 변경
- 카테고리 목록 조회 API 엔드포인트 추가 (/api/v1/prices/categories)
- 상품 수정 시 기존 카테고리가 select box에서 자동 선택되도록 개선
- 데이터베이스 초기 데이터를 enum 값으로 변경
- 관련 테스트 케이스 수정 및 보완