@@ -18,11 +18,11 @@ class ProductPriceCalculatorTest {
   @DisplayName("상품 목록의 총 가격을 올바르게 계산한다")
   void calculateTotalPrice_validProducts() {
     // given
-    ProductWithBrand product1 = new ProductWithBrand(1L, "상의", "티셔츠", 10000L, 1L, "A");
-    ProductWithBrand product2 = new ProductWithBrand(2L, "하의", "바지", 15000L, 1L, "A");
-    ProductWithBrand product3 = new ProductWithBrand(3L, "신발", "운동화", 20000L, 2L, "B");
-
-    List<ProductWithBrand> products = Arrays.asList(product1, product2, product3);
+    List<ProductWithBrand> products = List.of(
+        new ProductWithBrand(1L, Category.TOPS, "티셔츠", 10000L, 1L, "A"),
+        new ProductWithBrand(2L, Category.PANTS, "바지", 15000L, 1L, "A"),
+        new ProductWithBrand(3L, Category.SNEAKERS, "운동화", 20000L, 2L, "B")
+    );
 
     // when
     long totalPrice = productPriceCalculator.calculateTotalPrice(products);
@@ -48,8 +48,9 @@ class ProductPriceCalculatorTest {
   @DisplayName("단일 상품의 총 가격을 올바르게 계산한다")
   void calculateTotalPrice_singleProduct() {
     // given
-    ProductWithBrand product = new ProductWithBrand(1L, "상의", "티셔츠", 12500L, 1L, "A");
-    List<ProductWithBrand> products = List.of(product);
+    List<ProductWithBrand> products = List.of(
+        new ProductWithBrand(1L, Category.TOPS, "티셔츠", 12500L, 1L, "A")
+    );
 
     // when
     long totalPrice = productPriceCalculator.calculateTotalPrice(products);
@@ -62,11 +63,11 @@ class ProductPriceCalculatorTest {
   @DisplayName("같은 가격의 여러 상품들의 총 가격을 올바르게 계산한다")
   void calculateTotalPrice_samePriceProducts() {
     // given
-    ProductWithBrand product1 = new ProductWithBrand(1L, "상의", "티셔츠", 10000L, 1L, "A");
-    ProductWithBrand product2 = new ProductWithBrand(2L, "하의", "바지", 10000L, 1L, "A");
-    ProductWithBrand product3 = new ProductWithBrand(3L, "신발", "운동화", 10000L, 1L, "A");
-
-    List<ProductWithBrand> products = Arrays.asList(product1, product2, product3);
+    List<ProductWithBrand> products = List.of(
+        new ProductWithBrand(1L, Category.TOPS, "티셔츠", 10000L, 1L, "A"),
+        new ProductWithBrand(2L, Category.PANTS, "바지", 10000L, 1L, "A"),
+        new ProductWithBrand(3L, Category.SNEAKERS, "운동화", 10000L, 1L, "A")
+    );
 
     // when
     long totalPrice = productPriceCalculator.calculateTotalPrice(products);
@@ -79,10 +80,10 @@ class ProductPriceCalculatorTest {
   @DisplayName("0원 상품이 포함된 목록의 총 가격을 올바르게 계산한다")
   void calculateTotalPrice_withZeroPriceProduct() {
     // given
-    ProductWithBrand freeProduct = new ProductWithBrand(1L, "증정품", "무료샘플", 0L, 1L, "A");
-    ProductWithBrand paidProduct = new ProductWithBrand(2L, "상의", "티셔츠", 15000L, 1L, "A");
-
-    List<ProductWithBrand> products = Arrays.asList(freeProduct, paidProduct);
+    List<ProductWithBrand> products = List.of(
+        new ProductWithBrand(1L, Category.ACCESSORIES, "무료샘플", 0L, 1L, "A"),
+        new ProductWithBrand(2L, Category.TOPS, "티셔츠", 15000L, 1L, "A")
+    );
 
     // when
     long totalPrice = productPriceCalculator.calculateTotalPrice(products);
